--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -100,3 +100,5 @@ spec:
       value: "a01apvl00145.adeo.no:8443,a01apvl00146.adeo.no:8443,a01apvl00147.adeo.no:8443,a01apvl00148.adeo.no:8443,a01apvl00149.adeo.no:8443,a01apvl00150.adeo.no:8443"
     - name: APP_ENVIRONMENT_NAME
       value: "p"
+    - name: PDL_API_URL
+      value: "https://pdl-api.nais.adeo.no/graphql"
