--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -52,20 +52,16 @@ spec:
   env:
     - name: SECURITY_TOKEN_SERVICE_DISCOVERY_URL
       value: "https://security-token-service.nais.adeo.no/rest/v1/sts/.well-known/openid-configuration"
-    - name: SECURITYTOKENSERVICE_URL
-      value: "https://sts.adeo.no/SecurityTokenServiceProvider/"
-    - name: MODIACONTEXTHOLDERDB_URL
-      value: "jdbc:oracle:thin:@(DESCRIPTION=(FAILOVER=on)(CONNECT_TIMEOUT= 15)(RETRY_COUNT=20)(RETRY_DELAY=3)(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=a01dbfl030.adeo.no)(PORT=1521))(ADDRESS=(PROTOCOL=TCP)(HOST=a01dbfl031.adeo.no)(PORT=1522)))(CONNECT_DATA=(SERVICE_NAME=modiacontextholder_ha)))"
-    - name: MODIACONTEXTHOLDERDB_OEMENDPOINT
-      value: "/em/cloud/dbaas/pluggabledbplatforminstance/byrequest/161"
     - name: AXSYS_REST_API_URL
       value: "https://axsys.nais.adeo.no/api"
-    - name: VIRKSOMHET_ORGANISASJONENHET_V2_SECURITYTOKEN
-      value: "SAML"
-    - name: VIRKSOMHET_ORGANISASJONENHET_V2_ENDPOINTURL
-      value: "https://app.adeo.no/norg2/ws/OrganisasjonEnhet/v2"
-    - name: VIRKSOMHET_ORGANISASJONENHET_V2_WSDLURL
-      value: "http://maven.adeo.no/nexus/content/groups/public/no/nav/tjenester/nav-organisasjonEnhet-v2-tjenestespesifikasjon/2.1.0/nav-organisasjonEnhet-v2-tjenestespesifikasjon-2.1.0.zip"
+    - name: PDL_API_URL
+      value: "https://pdl-api.nais.adeo.no/graphql"
+    - name: UNLEASH_API_URL
+      value: "https://unleash.nais.adeo.no/api/"
+    - name: NORG2_API_URL
+      value: "https://app.adeo.no/norg2/api"
+    - name: MODIACONTEXTHOLDERDB_URL
+      value: "jdbc:oracle:thin:@(DESCRIPTION=(FAILOVER=on)(CONNECT_TIMEOUT= 15)(RETRY_COUNT=20)(RETRY_DELAY=3)(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=a01dbfl030.adeo.no)(PORT=1521))(ADDRESS=(PROTOCOL=TCP)(HOST=a01dbfl031.adeo.no)(PORT=1522)))(CONNECT_DATA=(SERVICE_NAME=modiacontextholder_ha)))"
     - name: LDAP_BASEDN
       value: "dc=adeo,dc=no"
     - name: LDAP_URL
@@ -76,8 +72,6 @@ spec:
       value: "ou=ServiceAccounts,dc=adeo,dc=no"
     - name: LDAP_DOMAIN
       value: "ADEO.NO"
-    - name: UNLEASH_API_URL
-      value: "https://unleash.nais.adeo.no/api/"
     - name: ISSO_CLIENT_ID
       value: "veilarblogin-p"
     - name: FPSAK_CLIENT_ID
@@ -94,5 +88,3 @@ spec:
       value: "a01apvl00145.adeo.no:8443,a01apvl00146.adeo.no:8443,a01apvl00147.adeo.no:8443,a01apvl00148.adeo.no:8443,a01apvl00149.adeo.no:8443,a01apvl00150.adeo.no:8443"
     - name: APP_ENVIRONMENT_NAME
       value: "p"
-    - name: PDL_API_URL
-      value: "https://pdl-api.nais.adeo.no/graphql"
