--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,6 @@
     <packaging>war</packaging>
 
     <properties>
-        <tjenestespesifikasjoner.version>1.2019.06.11-13.36-786a4cec3151</tjenestespesifikasjoner.version>
         <graphql-kotlin.version>3.5.0</graphql-kotlin.version>
         <kotlin.version>1.3.72</kotlin.version>
     </properties>
@@ -71,13 +70,6 @@
 
 
     <dependencies>
-        <!-- tjenester -->
-        <dependency>
-            <groupId>no.nav.tjenestespesifikasjoner</groupId>
-            <artifactId>organisasjonenhet-v2-tjenestespesifikasjon</artifactId>
-            <version>${tjenestespesifikasjoner.version}</version>
-        </dependency>
-
         <!-- kafka -->
         <dependency>
             <groupId>org.apache.kafka</groupId>
@@ -306,7 +298,7 @@
                         </goals>
                         <configuration>
                             <schemaFile>src/main/resources/pdl/schema.graphql</schemaFile>
-                            <packageName>no.nav.sbl.pdl.generated</packageName>
+                            <packageName>no.nav.sbl.consumers.pdl.generated</packageName>
                             <queryFileDirectory>src/main/resources/pdl/queries</queryFileDirectory>
                             <converters>
                                 <Long>
