--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,17 @@
     <artifactId>modiacontextholder</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
+    <repositories>
+        <repository>
+            <id>jcenter</id>
+            <url>https://jcenter.bintray.com</url>
+        </repository>
+    </repositories>
 
     <properties>
         <graphql-kotlin.version>3.5.0</graphql-kotlin.version>
         <kotlin.version>1.3.72</kotlin.version>
+        <ktor.version>1.3.2</ktor.version>
     </properties>
 
     <dependencyManagement>
@@ -64,6 +71,16 @@
                 <groupId>com.expediagroup</groupId>
                 <artifactId>graphql-kotlin-client</artifactId>
                 <version>${graphql-kotlin.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.ktor</groupId>
+                <artifactId>ktor-server-core</artifactId>
+                <version>${ktor.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.ktor</groupId>
+                <artifactId>ktor-server-netty</artifactId>
+                <version>${ktor.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
