--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -62,7 +62,7 @@ jobs:
           PRINT_PAYLOAD: true
           CLUSTER: dev-fss
           RESOURCE: .nais/qa-template.yaml
-          VARS: .nais/${{ matrix.namespace }}.json
+          VAR: namespace=${{matrix.namespace}}
 
   deploy-prod:
     name: Deploy to prod
