--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,7 +3,7 @@ name: Build, push, and deploy
 on: [push]
 
 env:
-  IMAGE: docker.pkg.github.com/${{ github.repository }}/modiacontextholder:${{ github.sha }}
+  IMAGE: docker.pkg.github.com/${{ github.repository }}/no.nav.sbl.modiacontextholder:${{ github.sha }}
   CI: true
   TZ: Europe/Oslo
 
