--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <artifactId>modiacontextholder</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <repositories>
         <repository>
             <id>jcenter</id>
@@ -21,6 +21,8 @@
     </repositories>
 
     <properties>
+        <java.version>11</java.version>
+        <kotlin.compiler.jvmTarget>11</kotlin.compiler.jvmTarget>
         <graphql-kotlin.version>3.5.0</graphql-kotlin.version>
         <kotlin.version>1.3.72</kotlin.version>
         <ktor.version>1.3.2</ktor.version>
@@ -236,14 +238,39 @@
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
+            <version>${kotlin.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jdk8</artifactId>
+            <version>${kotlin.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-reflect</artifactId>
+            <version>${kotlin.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.ktor</groupId>
+            <artifactId>ktor-jackson</artifactId>
+            <version>${ktor.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.ktor</groupId>
+            <artifactId>ktor-metrics-micrometer</artifactId>
+            <version>${ktor.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+            <version>1.5.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.seratch</groupId>
+            <artifactId>kotliquery</artifactId>
+            <version>1.3.1</version>
         </dependency>
     </dependencies>
 
