--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <artifactId>modiacontextholder</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <properties>
         <java.version>11</java.version>
