--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <version>2.1.1.RELEASE</version>
     </parent>
 
+    <groupId>no.nav.sbl</groupId>
     <artifactId>modiacontextholder</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
