--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -86,6 +86,8 @@ spec:
       value: "https://login.microsoftonline.com/62366534-1ec3-4962-8869-9b5535279d0b/v2.0/.well-known/openid-configuration"
     - name: LOGINSERVICE_OIDC_CLIENTID
       value: "9b4e07a3-4f4c-4bab-b866-87f62dff480d"
+    - name: VEILARBLOGIN_AAD_CLIENT_ID
+      value: "109c7064-47c9-4e34-b735-8cdc0d383cc1"
     - name: SYFO_SMREG_CLIENTID
       value: "ab2d8ca9-7af1-45bb-af07-0f4793695e63"
     - name: KAFKA_BROKERS_URL
