--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -92,6 +92,8 @@ spec:
       value: "ab2d8ca9-7af1-45bb-af07-0f4793695e63"
     - name: SYFO_SMMANUELL_CLIENTID
       value: "77b2d317-04c8-4ce0-8254-d617077b97c9"
+    - name: SOSIALHJELP_MODIA_CLIENTID
+      value: "6f661f36-1adb-42c3-9e10-294a10007880"
     - name: KAFKA_BROKERS_URL
       value: "a01apvl00145.adeo.no:8443,a01apvl00146.adeo.no:8443,a01apvl00147.adeo.no:8443,a01apvl00148.adeo.no:8443,a01apvl00149.adeo.no:8443,a01apvl00150.adeo.no:8443"
     - name: APP_ENVIRONMENT_NAME
