--- a/.nais/qa-template.yaml
+++ b/.nais/qa-template.yaml
@@ -93,6 +93,8 @@ spec:
       value: "6d29c845-6662-4c2c-a3b8-46a1e1967855"
     - name: SYFO_SMMANUELL_CLIENTID
       value: "7c079d88-1038-4cb3-af45-a09fe5a67d6f"
+    - name: SOSIALHJELP_MODIA_CLIENTID
+      value: "6f661f36-1adb-42c3-9e10-294a10007880"
     - name: KAFKA_BROKERS_URL
       value: "b27apvl00045.preprod.local:8443,b27apvl00046.preprod.local:8443,b27apvl00047.preprod.local:8443"
     - name: APP_ENVIRONMENT_NAME
