--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -56,6 +56,8 @@ spec:
       value: "https://security-token-service.nais.adeo.no/rest/v1/sts/.well-known/openid-configuration"
     - name: AXSYS_REST_API_URL
       value: "https://axsys.nais.adeo.no"
+    - name: UNLEASH_API_URL
+      value: "https://unleash.nais.io/api/"
     - name: PDL_API_URL
       value: "https://pdl-api.nais.adeo.no/graphql"
     - name: NORG2_API_URL
