--- a/.nais/qa-template.yaml
+++ b/.nais/qa-template.yaml
@@ -53,6 +53,8 @@ spec:
         mountPath: /var/run/secrets/nais.io/db_config
       - kvPath: /apikey/appdynamics/dev
         mountPath: /var/run/secrets/nais.io/vault
+  secureLogs:
+    enabled: true
   env:
     - name: SECURITY_TOKEN_SERVICE_DISCOVERY_URL
       value: "https://security-token-service.nais.preprod.local/rest/v1/sts/.well-known/openid-configuration"
