[OPP-1331] fjerne q6-deploy og legger til modialogin audience
Q6 har ikke vært fungere på en god stund, uten at det har blitt savnet.
Så fjerner derfor deploy til det miljøet.

modialogin er lagt til som godkjent audience, slik at login via den løsning
nå vil fungere.

--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -34,6 +34,7 @@ spec:
     - https://modiacontextholder.nais.adeo.no/modiacontextholder
     - https://modapp.adeo.no/modiacontextholder
     - https://app.adeo.no/modiacontextholder
+    - https://modia.adeo.no/modiacontextholder
   replicas:
     min: 2
     max: 4
@@ -78,6 +79,8 @@ spec:
       value: "https://graph.microsoft.com/v1.0"
     - name: ISSO_CLIENT_ID
       value: "veilarblogin-p"
+    - name: MODIA_CLIENT_ID
+      value: "modialogin-p"
     - name: FPSAK_CLIENT_ID
       value: "fpsak-frontend-p"
     - name: ISSO_DISCOVERY_URL
