--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -87,6 +87,8 @@ spec:
       value: "https://isso.adeo.no/isso/oauth2/.well-known/openid-configuration"
     - name: ISSO_REFRESH_URL
       value: "https://app.adeo.no/veilarblogin/api/openam-refresh"
+    - name: MODIA_REFRESH_URL
+      value: "https://modia.adeo.no/modialogin/api/refresh"
     - name: LOGINSERVICE_OIDC_DISCOVERYURI
       value: "https://login.microsoftonline.com/navno.onmicrosoft.com/.well-known/openid-configuration"
     - name: AAD_V2_DISCOVERURI
