--- a/.nais/qa-template.yaml
+++ b/.nais/qa-template.yaml
@@ -89,6 +89,8 @@ spec:
       value: "https://isso-q.adeo.no/isso/oauth2/.well-known/openid-configuration"
     - name: ISSO_REFRESH_URL
       value: "https://app-{{ namespace }}.adeo.no/veilarblogin/api/openam-refresh"
+    - name: MODIA_REFRESH_URL
+      value: "https://modia-{{ namespace }}.dev.adeo.no/modialogin/api/refresh"
     - name: LOGINSERVICE_OIDC_DISCOVERYURI
       value: "https://login.microsoftonline.com/966ac572-f5b7-4bbe-aa88-c76419c0f851/.well-known/openid-configuration"
     - name: AAD_V2_DISCOVERURI
