--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -34,7 +34,6 @@ spec:
     - https://modiacontextholder.nais.adeo.no/modiacontextholder
     - https://modapp.adeo.no/modiacontextholder
     - https://app.adeo.no/modiacontextholder
-    - https://modia.adeo.no/modiacontextholder
   replicas:
     min: 2
     max: 4
@@ -88,7 +87,7 @@ spec:
     - name: ISSO_REFRESH_URL
       value: "https://app.adeo.no/veilarblogin/api/openam-refresh"
     - name: MODIA_REFRESH_URL
-      value: "https://modia.adeo.no/modialogin/api/refresh"
+      value: "https://app.adeo.no/modialogin/api/refresh"
     - name: LOGINSERVICE_OIDC_DISCOVERYURI
       value: "https://login.microsoftonline.com/navno.onmicrosoft.com/.well-known/openid-configuration"
     - name: AAD_V2_DISCOVERURI
