--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -92,6 +92,8 @@ spec:
       value: "9b4e07a3-4f4c-4bab-b866-87f62dff480d"
     - name: VEILARBLOGIN_AAD_CLIENT_ID
       value: "109c7064-47c9-4e34-b735-8cdc0d383cc1"
+    - name: SYFO_FINNFASTLEGE_CLIENTID
+      value: "916a8191-f241-4227-be1a-4b820657254f"
     - name: SYFO_SMREG_CLIENTID
       value: "ab2d8ca9-7af1-45bb-af07-0f4793695e63"
     - name: SYFO_SMMANUELL_CLIENTID
