--- a/.nais/qa-template.yaml
+++ b/.nais/qa-template.yaml
@@ -94,6 +94,8 @@ spec:
       value: "38e07d31-659d-4595-939a-f18dce3446c5"
     - name: VEILARBLOGIN_AAD_CLIENT_ID
       value: "2edd96a2-fb5a-4dfa-8f36-848ae306f9b1"
+    - name: SYFO_FINNFASTLEGE_CLIENTID
+      value: "decdb625-ddde-4c4a-9586-f20862b9e1fe"
     - name: SYFO_SMREG_CLIENTID
       value: "6d29c845-6662-4c2c-a3b8-46a1e1967855"
     - name: SYFO_SMMANUELL_CLIENTID
