--- a/.nais/qa-template.yaml
+++ b/.nais/qa-template.yaml
@@ -96,6 +96,8 @@ spec:
       value: "2edd96a2-fb5a-4dfa-8f36-848ae306f9b1"
     - name: SYFO_FINNFASTLEGE_CLIENTID
       value: "decdb625-ddde-4c4a-9586-f20862b9e1fe"
+    - name: SYFO_SYFOOVERSIKT_CLIENTID
+      value: "6db2c887-7c46-49a8-a6a5-26adec81a145"
     - name: SYFO_SMREG_CLIENTID
       value: "6d29c845-6662-4c2c-a3b8-46a1e1967855"
     - name: SYFO_SMMANUELL_CLIENTID
