--- a/.nais/qa-template.yaml
+++ b/.nais/qa-template.yaml
@@ -64,7 +64,7 @@ spec:
     - name: UNLEASH_API_URL
       value: "https://unleash.nais.io/api/"
     - name: PDL_API_URL
-      value: "https://pdl-api.nais.preprod.local/graphql"
+      value: "https://pdl-api-{{ namespace }}.dev.intern.nav.no/graphql"
     - name: NORG2_API_URL
       value: "https://app-{{ namespace }}.adeo.no/norg2"
     - name: LDAP_BASEDN
