--- a/.nais/qa-template.yaml
+++ b/.nais/qa-template.yaml
@@ -97,6 +97,8 @@ spec:
       value: "2edd96a2-fb5a-4dfa-8f36-848ae306f9b1"
     - name: SYFO_FINNFASTLEGE_CLIENTID
       value: "decdb625-ddde-4c4a-9586-f20862b9e1fe"
+    - name: SYFO_SYFOMODIAPERSON_CLIENTID
+      value: "648b37e1-1880-472b-bbf8-42e3677dc9ef"
     - name: SYFO_SYFOMOTEOVERSIKT_CLIENTID
       value: "5bfe761b-8fcb-4b89-81a0-f37bee456af5"
     - name: SYFO_SYFOOVERSIKT_CLIENTID
