--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -113,3 +113,5 @@ spec:
       value: "p"
     - name: AAREG_URL
       value: "https://arbeid-og-inntekt.nais.adeo.no"
+    - name: AAREG_LEGACY_URL
+      value: "https://modapp.adeo.no/aareg-web/?rolle=arbeidstaker&"
