--- a/.nais/qa-template.yaml
+++ b/.nais/qa-template.yaml
@@ -115,3 +115,5 @@ spec:
       value: "{{ namespace }}"
     - name: AAREG_URL
       value: "https://arbeid-og-inntekt-q1.dev.adeo.no"
+    - name: AAREG_LEGACY_URL
+      value: "https://modapp-q1.adeo.no/aareg-web/?rolle=arbeidstaker&"
