--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -105,6 +105,8 @@ spec:
       value: "ab2d8ca9-7af1-45bb-af07-0f4793695e63"
     - name: SYFO_SMMANUELL_CLIENTID
       value: "77b2d317-04c8-4ce0-8254-d617077b97c9"
+    - name: SYFO_SMMANUELL_NEXT_CLIENTID
+      value: "b67cdfa3-437e-4d30-8a3f-8e0708125338"
     - name: SOSIALHJELP_MODIA_CLIENTID
       value: "6f661f36-1adb-42c3-9e10-294a10007880"
     - name: KAFKA_BROKERS_URL
