--- a/.nais/qa-template.yaml
+++ b/.nais/qa-template.yaml
@@ -107,6 +107,8 @@ spec:
       value: "6d29c845-6662-4c2c-a3b8-46a1e1967855"
     - name: SYFO_SMMANUELL_CLIENTID
       value: "7c079d88-1038-4cb3-af45-a09fe5a67d6f"
+    - name: SYFO_SMMANUELL_NEXT_CLIENTID
+      value: "9f5e5e25-248b-4931-9645-433b845b1a83"
     - name: SOSIALHJELP_MODIA_CLIENTID
       value: "6f661f36-1adb-42c3-9e10-294a10007880"
     - name: KAFKA_BROKERS_URL
