--- a/.nais/qa-template.yaml
+++ b/.nais/qa-template.yaml
@@ -105,9 +105,9 @@ spec:
       value: "6db2c887-7c46-49a8-a6a5-26adec81a145"
     - name: SYFO_SMREG_CLIENTID
       value: "6d29c845-6662-4c2c-a3b8-46a1e1967855"
+    - name: SYFO_SMREG_NEW_CLIENTID
+      value: "45530b4a-b360-4eeb-a8dc-0d5100b7877c"
     - name: SYFO_SMMANUELL_CLIENTID
-      value: "7c079d88-1038-4cb3-af45-a09fe5a67d6f"
-    - name: SYFO_SMMANUELL_NEXT_CLIENTID
       value: "9f5e5e25-248b-4931-9645-433b845b1a83"
     - name: SOSIALHJELP_MODIA_CLIENTID
       value: "6f661f36-1adb-42c3-9e10-294a10007880"
