--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -109,6 +109,8 @@ spec:
       value: "b67cdfa3-437e-4d30-8a3f-8e0708125338"
     - name: SOSIALHJELP_MODIA_CLIENTID
       value: "6f661f36-1adb-42c3-9e10-294a10007880"
+    - name: SPINNSYN_FRONTEND_INTERNE_CLIENTID
+      value: "d9f767f1-89a0-413a-9c18-368eb3f752e9"
     - name: KAFKA_BROKERS_URL
       value: "a01apvl00145.adeo.no:8443,a01apvl00146.adeo.no:8443,a01apvl00147.adeo.no:8443,a01apvl00148.adeo.no:8443,a01apvl00149.adeo.no:8443,a01apvl00150.adeo.no:8443"
     - name: APP_ENVIRONMENT_NAME
