[OPP-1408] legge til redis i dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,19 @@
             <artifactId>ehcache</artifactId>
         </dependency>
 
+        <!-- redis -->
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>1.16.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>3.7.1</version>
+        </dependency>
+
 
         <!-- test -->
 
