--- a/.nais/qa-template.yaml
+++ b/.nais/qa-template.yaml
@@ -31,6 +31,7 @@ spec:
       cpu: 400m
       memory: 768Mi
   ingresses:
+    - https://modiacontextholder-{{ namespace }}.dev-fss-pub.nais.io/modiacontextholder
     - https://modiacontextholder-{{ namespace }}.dev.intern.nav.no/modiacontextholder
     - https://modiacontextholder-{{ namespace }}.nais.preprod.local/modiacontextholder
     - https://modiacontextholder-{{ namespace }}.dev.adeo.no/modiacontextholder
