[KAIZEN-0] Endrer namespace
gjøres slik at applikasjonen enkelt kan registreres til azuread og enklere motta OBO-tokens

--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -3,7 +3,7 @@ kind: Application
 apiVersion: nais.io/v1alpha1
 metadata:
   name: modiacontextholder
-  namespace: default
+  namespace: personoversikt
   labels:
     team: personoversikt
 spec:
