--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.1.RELEASE</version>
+        <version>2.6.5</version>
     </parent>
 
     <groupId>no.nav.sbl</groupId>
@@ -17,9 +17,9 @@
 
     <properties>
         <java.version>11</java.version>
-        <common.version>2.2020.09.10_12.21-5ce9f2fa2fca</common.version>
-        <graphql-kotlin.version>3.5.0</graphql-kotlin.version>
-        <kotlin.version>1.3.72</kotlin.version>
+        <common.version>2.2022.04.01_08.27-cbfeb0be0ee0</common.version>
+        <graphql-kotlin.version>3.6.8</graphql-kotlin.version>
+        <kotlin.version>1.6.10</kotlin.version>
     </properties>
 
     <dependencyManagement>
