[KAIZEN-0] sette opp salesforce redirect
gjøres fordi man må sjekke med unleash hvorvidt en bruker skal sendes med bruker i kontekst (e.g er med i piloten).
Dette gjøres fordi Salesforce ikke støtter urler med bruker i kontekst for brukere utenfor piloten

--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -136,3 +136,5 @@ spec:
       value: "https://arbeid-og-inntekt.nais.adeo.no"
     - name: REDIS_HOST
       value: "modiacontextholder-redis.personoversikt.svc.nais.local"
+    - name: SALESFORCE_URL
+      value: "https://navdialog.lightning.force.com"
