legger til veilarbportefoljeflatefs

--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -69,6 +69,9 @@ spec:
         - application: veilarbpersonflate
           namespace: poao
           cluster: prod-gcp
+        - application: veilarbportefoljeflatefs
+          namespace: obo
+          cluster: prod-gcp
   secureLogs:
     enabled: true
   env:
