--- a/.nais/qa-template.yaml
+++ b/.nais/qa-template.yaml
@@ -71,6 +71,9 @@ spec:
         - application: veilarbpersonflate
           namespace: poao
           cluster: dev-gcp
+        - application: veilarbportefoljeflatefs
+          namespace: obo
+          cluster: dev-gcp
   secureLogs:
     enabled: true
   env:
