legger til tilgang for beslutteroversikten

--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -72,6 +72,9 @@ spec:
         - application: veilarbportefoljeflatefs
           namespace: obo
           cluster: prod-gcp
+        - application: beslutteroversikt
+          namespace: obo
+          cluster: prod-gcp
   secureLogs:
     enabled: true
   env:
