--- a/.nais/qa-template.yaml
+++ b/.nais/qa-template.yaml
@@ -77,6 +77,9 @@ spec:
         - application: beslutteroversikt
           namespace: obo
           cluster: dev-gcp
+        - application: modiaflatefs-q1
+          namespace: personoversikt
+          cluster: dev-fss
   secureLogs:
     enabled: true
   env:
